[package]
name = "mempool_dumpster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
polars = { version = "0.31.1", features = ["parquet", "string_encoding", "polars-lazy", "lazy", "binary_encoding", "json", "dtype-struct"] }
dotenv = "0.15.0"

